# systemprune

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  more.md  panic.txt  specs.md
.cargo/: config.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/codeql/queries/: codeql-pack.yml
.github/codeql/queries/rust/: BlockAudit.ql
.github/workflows/: ci.yml  codeql.yml
.jules/: sentinel.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: df.rs  errors.rs  history.rs  lib.rs  log.rs  models.rs  orchestrator.rs  probe.rs  size.rs  sort.rs
core/src/scanners/: base.rs  cargo_cache.rs  conda.rs  docker.rs  flatpak.rs  fs_scan.rs  go_cache.rs  mod.rs  mypy.rs  node_modules.rs  ollama.rs  podman.rs  python_venv.rs  snap.rs  tox.rs
core/tests/: df_test.rs  history_test.rs  log_test.rs  models_test.rs  orchestrator_test.rs  probe_test.rs  scanner_integration.rs  size_test.rs  sort_test.rs
gui/: Cargo.toml
gui/src/: main.rs  window.rs
gui/tests/: ui_thread_safety.rs
tui/: Cargo.toml
tui/src/: app.rs  lib.rs  main.rs
tui/tests/: smoke.rs
