[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "tui",
    "gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["SystemPrune Contributors"]
repository = "https://github.com/example/systemprune"

[workspace.dependencies]
systemprune-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "6"
regex = "1"
once_cell = "1"
ratatui = "0.27"
crossterm = "0.28"
gtk = { version = "0.8", package = "gtk4" }
glib = "0.20"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
