[package]
name = "systemprune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for SystemPrune."

[[bin]]
name = "systemprune"
path = "src/main.rs"

[dependencies]
systemprune-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
