[package]
name = "systemprune-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ratatui-based terminal interface for SystemPrune."

[[bin]]
name = "systemprune-tui"
path = "src/main.rs"

[dependencies]
systemprune-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
